--- a/FacialRecognitionAnimator/app/build.gradle
+++ b/FacialRecognitionAnimator/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.0"
+    buildToolsVersion "30.0.1"
 
     defaultConfig {
         applicationId "com.example.facialrecognitionanimator"
@@ -25,11 +25,16 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'com.google.android.gms:play-services:7.8+'
+    //For Vision Mobile API
+    //implementation fileTree(dir: "libs", include: ["*.jar"])
+    //implementation 'com.google.android.gms:play-services:7.8+'
+
+    //For MLKit API
+    implementation 'com.google.mlkit:face-detection:16.0.1' //bundles the MLKit into the app
+    //implementation 'com.google.android.gms:play-services-mlkit-face-detection:16.1.0' //Downloads from Google Play Service
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.0'
+    implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
