--- a/FacialRecognitionAnimator/app/build.gradle
+++ b/FacialRecognitionAnimator/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation 'com.google.mlkit:face-detection:16.0.1' //bundles the MLKit into the app
     //implementation 'com.google.android.gms:play-services-mlkit-face-detection:16.1.0' //Downloads from Google Play Service
 
+    //implementation 'androidx.compose.ui:ui-graphics:0.0.0'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.1.0'
